# energydrink_rating

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: .env_secrets_example  devcontainer.json
energy_drink_rating/: database_config.json
energy_drink_rating/backend/DataLayer/: BasicModel.py  DatabaseConnector.py  Models.py
energy_drink_rating/backend/alembic/: env.py
energy_drink_rating/backend/alembic/versions/: 5c7ffbb51f60_initial_migration.py  f1e1d7c1299c_change_flavor_to_name.py
energy_drink_rating/backend/api/: app.py  dependency.py  schemas.py
energy_drink_rating/backend/api/crud/: AuthCrud.py  CombCrud.py  DrinkCrud.py  DrinkTypeCrud.py  ReviewCrud.py  UserCrud.py
energy_drink_rating/backend/api/routers/: CombRouter.py  DrinkRouter.py  DrinkTypeRouter.py  ReviewRouter.py  UserRouter.py
energy_drink_rating/backend/config/: ConfigKeys.py
energy_drink_rating/backend/dataLayer/: Models.py
energy_drink_rating/backend/test/: seed_db.py
